--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,11 @@ jobs:
     environment: production
 
     steps:
+      # 1️⃣ Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # 2️⃣ Display deployment info
       - name: Display deployment info
         run: |
           echo "🚀 Building and deploying SynTextAI"
@@ -26,15 +28,18 @@ jobs:
             echo "📝 Message: ${{ github.event.inputs.deploy_message }}"
           fi
 
+      # 3️⃣ Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      # 4️⃣ Login to DockerHub
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
+      # 5️⃣ Build & push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
@@ -52,7 +57,17 @@ jobs:
             REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }}
             REACT_APP_STRIPE_API_KEY=${{ secrets.REACT_APP_STRIPE_API_KEY }}
             REACT_APP_POST_HOG_API_KEY=${{ secrets.REACT_APP_POST_HOG_API_KEY }}
+            FIREBASE_PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}
+            FIREBASE_CLIENT_EMAIL=${{ secrets.FIREBASE_CLIENT_EMAIL }}
+            FIREBASE_PRIVATE_KEY=${{ secrets.FIREBASE_PRIVATE_KEY }}
+            FIREBASE_PRIVATE_KEY_ID=${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
+            FIREBASE_CLIENT_ID=${{ secrets.FIREBASE_CLIENT_ID }}
+            FIREBASE_CLIENT_CERT_URL=${{ secrets.FIREBASE_CLIENT_CERT_URL }}
+            FIREBASE_AUTH_URI=https://accounts.google.com/o/oauth2/auth
+            FIREBASE_TOKEN_URI=https://oauth2.googleapis.com/token
+            FIREBASE_AUTH_PROVIDER_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
 
+      # 6️⃣ Copy deploy files to server
       - name: Copy deploy files to DigitalOcean
         uses: appleboy/scp-action@v0.1.3
         with:
@@ -62,19 +77,41 @@ jobs:
           source: "deploy.sh,docker-compose.yml"
           target: "/home/root/"
 
+      # 7️⃣ Deploy to server
       - name: Deploy to DigitalOcean
         uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.DO_HOST }}
           username: ${{ secrets.DO_USERNAME }}
           key: ${{ secrets.DO_SSH_KEY }}
-          timeout: 7200s
           script_stop: true
           script: |
             set -e
             cd /home/root/
-            echo "🚀 Running deployment script..."
+
+            # Recreate frontend .env file
+            cat << EOF > frontend/.env
+            REACT_APP_FIREBASE_API_KEY=${{ secrets.REACT_APP_FIREBASE_API_KEY }}
+            REACT_APP_FIREBASE_AUTH_DOMAIN=${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
+            REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
+            REACT_APP_FIREBASE_STORAGE_BUCKET=${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
+            REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
+            REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }}
+            REACT_APP_POST_HOG_API_KEY=${{ secrets.REACT_APP_POST_HOG_API_KEY }}
+            EOF
+            chmod 600 frontend/.env
+
+            # Create Firebase credentials
+            mkdir -p api/config
+            echo "${{ secrets.FIREBASE_CREDENTIALS_JSON }}" > api/config/credentials.json
+            chmod 600 api/config/credentials.json
+
+            # Ensure deploy script is executable
             chmod +x deploy.sh
-            ENV_FILE_CONTENT="${{ secrets.ENV_FILE_CONTENT }}"
-            FIREBASE_CREDENTIALS_JSON="${{ secrets.FIREBASE_CREDENTIALS_JSON }}"
-            ./deploy.sh || (echo "⚠️ Deployment script failed. Attempting fallback..." && ./deploy.sh fallback)
+
+            # Run deployment
+            ./deploy.sh || { 
+              echo "⚠️ Deploy script failed, attempting fallback..."
+              docker-compose down || true
+              docker-compose up -d --build --force-recreate
+            }
