--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -105,24 +105,30 @@ jobs:
             echo "FIREBASE_PRIVATE_KEY_ID=\"${{ secrets.FIREBASE_PRIVATE_KEY_ID }}\"" >> .env
             echo "FIREBASE_CLIENT_ID=\"${{ secrets.FIREBASE_CLIENT_ID }}\"" >> .env
             echo "FIREBASE_CLIENT_CERT_URL=\"${{ secrets.FIREBASE_CLIENT_CERT_URL }}\"" >> .env
-            echo "FIREBASE_AUTH_URI=\"${{ secrets.FIREBASE_AUTH_URI || 'https://accounts.google.com/o/oauth2/auth' }}\"" >> .env
-            echo "FIREBASE_TOKEN_URI=\"${{ secrets.FIREBASE_TOKEN_URI || 'https://oauth2.googleapis.com/token' }}\"" >> .env
-            echo "FIREBASE_AUTH_PROVIDER_CERT_URL=\"${{ secrets.FIREBASE_AUTH_PROVIDER_CERT_URL || 'https://www.googleapis.com/oauth2/v1/certs' }}\"" >> .env
+            
+            # Set default values for optional Firebase URIs
+            FIREBASE_AUTH_URI="${{ secrets.FIREBASE_AUTH_URI || 'https://accounts.google.com/o/oauth2/auth' }}"
+            FIREBASE_TOKEN_URI="${{ secrets.FIREBASE_TOKEN_URI || 'https://oauth2.googleapis.com/token' }}"
+            FIREBASE_AUTH_PROVIDER_CERT_URL="${{ secrets.FIREBASE_AUTH_PROVIDER_CERT_URL || 'https://www.googleapis.com/oauth2/v1/certs' }}"
+            
+            echo "FIREBASE_AUTH_URI=\"$FIREBASE_AUTH_URI\"" >> .env
+            echo "FIREBASE_TOKEN_URI=\"$FIREBASE_TOKEN_URI\"" >> .env
+            echo "FIREBASE_AUTH_PROVIDER_CERT_URL=\"$FIREBASE_AUTH_PROVIDER_CERT_URL\"" >> .env
             
             # Also write the credentials file directly for backward compatibility
             mkdir -p api/config
-            cat > api/config/credentials.json << EOF
+            cat > api/config/credentials.json << 'EOF'
 {
   "type": "service_account",
-  "project_id": "${{ secrets.FIREBASE_PROJECT_ID }}",
-  "private_key_id": "${{ secrets.FIREBASE_PRIVATE_KEY_ID }}",
-  "private_key": "${{ secrets.FIREBASE_PRIVATE_KEY }}",
-  "client_email": "${{ secrets.FIREBASE_CLIENT_EMAIL }}",
-  "client_id": "${{ secrets.FIREBASE_CLIENT_ID }}",
-  "auth_uri": "${{ secrets.FIREBASE_AUTH_URI || 'https://accounts.google.com/o/oauth2/auth' }}",
-  "token_uri": "${{ secrets.FIREBASE_TOKEN_URI || 'https://oauth2.googleapis.com/token' }}",
-  "auth_provider_x509_cert_url": "${{ secrets.FIREBASE_AUTH_PROVIDER_CERT_URL || 'https://www.googleapis.com/oauth2/v1/certs' }}",
-  "client_x509_cert_url": "${{ secrets.FIREBASE_CLIENT_CERT_URL }}",
+  "project_id": "'"${{ secrets.FIREBASE_PROJECT_ID }}"'",
+  "private_key_id": "'"${{ secrets.FIREBASE_PRIVATE_KEY_ID }}"'",
+  "private_key": "'"${{ secrets.FIREBASE_PRIVATE_KEY }}"'",
+  "client_email": "'"${{ secrets.FIREBASE_CLIENT_EMAIL }}"'",
+  "client_id": "'"${{ secrets.FIREBASE_CLIENT_ID }}"'",
+  "auth_uri": "'"$FIREBASE_AUTH_URI"'",
+  "token_uri": "'"$FIREBASE_TOKEN_URI"'",
+  "auth_provider_x509_cert_url": "'"$FIREBASE_AUTH_PROVIDER_CERT_URL"'",
+  "client_x509_cert_url": "'"${{ secrets.FIREBASE_CLIENT_CERT_URL }}"'",
   "universe_domain": "googleapis.com"
 }
 EOF
