--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,110 +16,94 @@ jobs:
     environment: production
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Display deployment info
-        run: |
-          echo "🚀 Building and deploying SynTextAI"
-          if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-            echo "📝 Message: ${{ github.event.inputs.deploy_message }}"
+    - name: Display deployment information
+      run: |
+        echo "🚀 Building and deploying SynTextAI"
+        if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
+          echo "📝 Message: ${{ github.event.inputs.deploy_message }}"
+        fi
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Bootstrap VM (Docker + Compose)
+      uses: appleboy/ssh-action@v0.1.10
+      with:
+        host: ${{ secrets.DO_HOST }}
+        username: ${{ secrets.DO_USERNAME }}
+        key: ${{ secrets.DO_SSH_KEY }}
+        script_stop: true
+        timeout: 7200s  # 2 hour timeout
+        script: |
+          if ! command -v docker >/dev/null 2>&1; then
+            echo "Installing Docker..."
+            sudo apt-get update
+            sudo apt-get install -y docker.io curl
+            sudo systemctl enable --now docker
           fi
+          if ! command -v docker-compose >/dev/null 2>&1; then
+            echo "Installing Docker Compose..."
+            DOCKER_COMPOSE_VERSION="v2.28.1"
+            sudo curl -L "https://github.com/docker/compose/releases/download/$DOCKER_COMPOSE_VERSION/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
+          fi
+    - name: Login to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        push: true
+        tags: osasdeeon/syntextai:latest
+        cache-from: type=registry,ref=osasdeeon/syntextai:buildcache
+        cache-to: type=registry,ref=osasdeeon/syntextai:buildcache,mode=max
+        build-args: |
+          REACT_APP_FIREBASE_API_KEY=${{ secrets.REACT_APP_FIREBASE_API_KEY }}
+          REACT_APP_FIREBASE_AUTH_DOMAIN=${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
+          REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
+          REACT_APP_FIREBASE_STORAGE_BUCKET=${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
+          REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
+          REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }}
+          REACT_APP_STRIPE_API_KEY=${{ secrets.REACT_APP_STRIPE_API_KEY }}
+          REACT_APP_POST_HOG_API_KEY=${{ secrets.REACT_APP_POST_HOG_API_KEY }}
+    - name: Copy deploy files to Digital Ocean
+      uses: appleboy/scp-action@v0.1.3
+      with:
+        host: ${{ secrets.DO_HOST }}
+        username: ${{ secrets.DO_USERNAME }}
+        key: ${{ secrets.DO_SSH_KEY }}
+        source: "deploy.sh,docker-compose.yml"
+        target: "/home/root/"
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: osasdeeon/syntextai:latest
-          cache-from: type=registry,ref=osasdeeon/syntextai:buildcache
-          cache-to: type=registry,ref=osasdeeon/syntextai:buildcache,mode=max
-          build-args: |
-            REACT_APP_FIREBASE_API_KEY=${{ secrets.REACT_APP_FIREBASE_API_KEY }}
-            REACT_APP_FIREBASE_AUTH_DOMAIN=${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
-            REACT_APP_FIREBASE_PROJECT_ID=${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
-            REACT_APP_FIREBASE_STORAGE_BUCKET=${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
-            REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
-            REACT_APP_FIREBASE_APP_ID=${{ secrets.REACT_APP_FIREBASE_APP_ID }}
-            REACT_APP_STRIPE_API_KEY=${{ secrets.REACT_APP_STRIPE_API_KEY }}
-            REACT_APP_POST_HOG_API_KEY=${{ secrets.REACT_APP_POST_HOG_API_KEY }}
-            FIREBASE_CREDENTIALS_JSON=${{ secrets.FIREBASE_CREDENTIALS_JSON }}
-
-      - name: Copy deploy files to DigitalOcean
-        uses: appleboy/scp-action@v0.1.3
-        with:
-          host: ${{ secrets.DO_HOST }}
-          username: ${{ secrets.DO_USERNAME }}
-          key: ${{ secrets.DO_SSH_KEY }}
-          source: "deploy.sh,docker-compose.yml"
-          target: "/home/root/"
-
-      - name: Deploy to DigitalOcean
-        uses: appleboy/ssh-action@v0.1.10
-        with:
-          host: ${{ secrets.DO_HOST }}
-          username: ${{ secrets.DO_USERNAME }}
-          key: ${{ secrets.DO_SSH_KEY }}
-          script_stop: true
-          env:
-            REACT_APP_FIREBASE_API_KEY: ${{ secrets.REACT_APP_FIREBASE_API_KEY }}
-            REACT_APP_FIREBASE_AUTH_DOMAIN: ${{ secrets.REACT_APP_FIREBASE_AUTH_DOMAIN }}
-            REACT_APP_FIREBASE_PROJECT_ID: ${{ secrets.REACT_APP_FIREBASE_PROJECT_ID }}
-            REACT_APP_FIREBASE_STORAGE_BUCKET: ${{ secrets.REACT_APP_FIREBASE_STORAGE_BUCKET }}
-            REACT_APP_FIREBASE_MESSAGING_SENDER_ID: ${{ secrets.REACT_APP_FIREBASE_MESSAGING_SENDER_ID }}
-            REACT_APP_FIREBASE_APP_ID: ${{ secrets.REACT_APP_FIREBASE_APP_ID }}
-            REACT_APP_STRIPE_API_KEY: ${{ secrets.REACT_APP_STRIPE_API_KEY }}
-            REACT_APP_POST_HOG_API_KEY: ${{ secrets.REACT_APP_POST_HOG_API_KEY }}
-            FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-            FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
-            FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
-            FIREBASE_PRIVATE_KEY_ID: ${{ secrets.FIREBASE_PRIVATE_KEY_ID }}
-            FIREBASE_CLIENT_ID: ${{ secrets.FIREBASE_CLIENT_ID }}
-            FIREBASE_CLIENT_CERT_URL: ${{ secrets.FIREBASE_CLIENT_CERT_URL }}
-            FIREBASE_AUTH_URI: ${{ secrets.FIREBASE_AUTH_URI }}
-            FIREBASE_TOKEN_URI: ${{ secrets.FIREBASE_TOKEN_URI }}
-            FIREBASE_AUTH_PROVIDER_CERT_URL: ${{ secrets.FIREBASE_AUTH_PROVIDER_CERT_URL }}
-          script: |
-            set -e
-            cd /home/root/
-
-            mkdir -p frontend api/config
-
-            # Generate .env using environment variables
-            cat > .env << 'EOF'
-REACT_APP_FIREBASE_API_KEY="$REACT_APP_FIREBASE_API_KEY"
-REACT_APP_FIREBASE_AUTH_DOMAIN="$REACT_APP_FIREBASE_AUTH_DOMAIN"
-REACT_APP_FIREBASE_PROJECT_ID="$REACT_APP_FIREBASE_PROJECT_ID"
-REACT_APP_FIREBASE_STORAGE_BUCKET="$REACT_APP_FIREBASE_STORAGE_BUCKET"
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID="$REACT_APP_FIREBASE_MESSAGING_SENDER_ID"
-REACT_APP_FIREBASE_APP_ID="$REACT_APP_FIREBASE_APP_ID"
-REACT_APP_STRIPE_API_KEY="$REACT_APP_STRIPE_API_KEY"
-REACT_APP_POST_HOG_API_KEY="$REACT_APP_POST_HOG_API_KEY"
-FIREBASE_PROJECT_ID="$FIREBASE_PROJECT_ID"
-FIREBASE_PRIVATE_KEY="$FIREBASE_PRIVATE_KEY"
-FIREBASE_CLIENT_EMAIL="$FIREBASE_CLIENT_EMAIL"
-FIREBASE_PRIVATE_KEY_ID="$FIREBASE_PRIVATE_KEY_ID"
-FIREBASE_CLIENT_ID="$FIREBASE_CLIENT_ID"
-FIREBASE_CLIENT_CERT_URL="$FIREBASE_CLIENT_CERT_URL"
-FIREBASE_AUTH_URI="${FIREBASE_AUTH_URI:-https://accounts.google.com/o/oauth2/auth}"
-FIREBASE_TOKEN_URI="${FIREBASE_TOKEN_URI:-https://oauth2.googleapis.com/token}"
-FIREBASE_AUTH_PROVIDER_CERT_URL="${FIREBASE_AUTH_PROVIDER_CERT_URL:-https://www.googleapis.com/oauth2/v1/certs}"
-EOF
-
-            chmod 600 .env
-
-            # Write Firebase credentials.json
-            echo "$FIREBASE_CREDENTIALS_JSON" > api/config/credentials.json
-            chmod 600 api/config/credentials.json
-
-            chmod +x deploy.sh
-            ./deploy.sh
+    - name: Deploy to Digital Ocean
+      uses: appleboy/ssh-action@v0.1.10
+      with:
+        host: ${{ secrets.DO_HOST }}
+        username: ${{ secrets.DO_USERNAME }}
+        key: ${{ secrets.DO_SSH_KEY }}
+        timeout: 7200s  # 2 hour timeout
+        script_stop: true
+        script: |
+          set -e
+          cd /home/root/
+          echo "🚀 Starting deployment process..."
+          chmod +x deploy.sh || true
+          if [ ! -f /home/root/.env ] && [ -n "${{ secrets.ENV_FILE_CONTENT }}" ]; then
+              echo "ℹ️ Creating .env file from secrets..."
+              echo "${{ secrets.ENV_FILE_CONTENT }}" > /home/root/.env
+              chmod 600 /home/root/.env
+          fi
+          if [ ! -f /home/root/api/config/credentials.json ] && [ -n "${{ secrets.FIREBASE_CREDENTIALS_JSON }}" ]; then
+              echo "ℹ️ Setting up Firebase credentials..."
+              mkdir -p /home/root/api/config
+              echo "${{ secrets.FIREBASE_CREDENTIALS_JSON }}" > /home/root/api/config/credentials.json
+              chmod 600 /home/root/api/config/credentials.json
+          fi
+          echo "🚀 Running deployment script..."
+          ./deploy.sh || (echo "⚠️ Deployment script failed. Attempting fallback..." && ./deploy.sh fallback)
