Fix .env file generation with proper escaping for Firebase private key

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,6 +90,11 @@ jobs:
           EOF
 
           chmod 600 .env
+          
+          # Debug: Show .env file contents (redacted)
+          echo "=== .env file contents ==="
+          sed 's/PRIVATE_KEY=.*/PRIVATE_KEY=***REDACTED***/g' .env | sed 's/SECRET=.*/SECRET=***REDACTED***/g'
+          echo "========================="
 
           # Write credentials.json
           mkdir -p api/config
